Fix warning log GC